--- a/gallery.html
+++ b/gallery.html
@@ -162,127 +162,127 @@
 
   <div class="gallery">
     <div class="image-card">
-      <img src="Atrium2.png" alt="Atrium2" />
+      <img src="images/Atrium2.png" alt="Atrium2" />
       <div class="caption">Atrium2</div>
     </div>
     <div class="image-card">
-      <img src="Birch.png" alt="Birch" />
+      <img src="images/Birch.png" alt="Birch" />
       <div class="caption">Birch</div>
     </div>
     <div class="image-card">
-      <img src="BirchesWc.png" alt="BirchesWc" />
+      <img src="images/BirchesWc.png" alt="BirchesWc" />
       <div class="caption">BirchesWc</div>
     </div>
     <div class="image-card">
-      <img src="BirchMeadow.png" alt="BirchMeadow" />
+      <img src="images/BirchMeadow.png" alt="BirchMeadow" />
       <div class="caption">BirchMeadow</div>
     </div>
     <div class="image-card">
-      <img src="BlueLandscape.png" alt="BlueLandscape" />
+      <img src="images/BlueLandscape.png" alt="BlueLandscape" />
       <div class="caption">BlueLandscape</div>
     </div>
     <div class="image-card">
-      <img src="Chickadee.png" alt="Chickadee" />
+      <img src="images/Chickadee.png" alt="Chickadee" />
       <div class="caption">Chickadee</div>
     </div>
     <div class="image-card">
-      <img src="DylansBDayCard.png" alt="DylansBDayCard" />
+      <img src="images/DylansBDayCard.png" alt="DylansBDayCard" />
       <div class="caption">Dylan's BDay Card</div>
     </div>
     <div class="image-card">
-      <img src="EvenTheSmallestThings.png" alt="EvenTheSmallestThings" />
+      <img src="images/EvenTheSmallestThings.png" alt="EvenTheSmallestThings" />
       <div class="caption">Even The Smallest Things</div>
     </div>
     <div class="image-card">
-      <img src="GoldenInvitation.png" alt="GoldenInvitation" />
+      <img src="images/GoldenInvitation.png" alt="GoldenInvitation" />
       <div class="caption">Golden Invitation</div>
     </div>
     <div class="image-card">
-      <img src="IMG-3868.png" alt="IMG-3868" />
+      <img src="images/IMG-3868.png" alt="IMG-3868" />
       <div class="caption">IMG-3868</div>
     </div>
     <div class="image-card">
-      <img src="IMG-3869.png" alt="IMG-3869" />
+      <img src="images/IMG-3869.png" alt="IMG-3869" />
       <div class="caption">IMG-3869</div>
     </div>
     <div class="image-card">
-      <img src="IMG-3870.png" alt="IMG-3870" />
+      <img src="images/IMG-3870.png" alt="IMG-3870" />
       <div class="caption">IMG-3870</div>
     </div>
     <div class="image-card">
-      <img src="LaPuertaAzul.png" alt="LaPuertaAzul" />
+      <img src="images/LaPuertaAzul.png" alt="LaPuertaAzul" />
       <div class="caption">La Puerta Azul</div>
     </div>
     <div class="image-card">
-      <img src="MoonlightDoctrine.png" alt="MoonlightDoctrine" />
+      <img src="images/MoonlightDoctrine.png" alt="MoonlightDoctrine" />
       <div class="caption">Moonlight Doctrine</div>
     </div>
     <div class="image-card">
-      <img src="MorningPrayer.png" alt="MorningPrayer" />
+      <img src="images/MorningPrayer.png" alt="MorningPrayer" />
       <div class="caption">Morning Prayer</div>
     </div>
     <div class="image-card">
-      <img src="Nuthatch.png" alt="Nuthatch" />
+      <img src="images/Nuthatch.png" alt="Nuthatch" />
       <div class="caption">Nuthatch</div>
     </div>
     <div class="image-card">
-      <img src="PaintedLady.png" alt="PaintedLady" />
+      <img src="images/PaintedLady.png" alt="PaintedLady" />
       <div class="caption">Painted Lady</div>
     </div>
     <div class="image-card">
-      <img src="ShadowoftheMountain.png" alt="ShadowoftheMountain" />
+      <img src="images/ShadowoftheMountain.png" alt="ShadowoftheMountain" />
       <div class="caption">Shadow of the Mountain</div>
     </div>
     <div class="image-card">
-      <img src="Solitude.png" alt="Solitude" />
+      <img src="images/Solitude.png" alt="Solitude" />
       <div class="caption">Solitude</div>
     </div>
     <div class="image-card">
-      <img src="StarryBackground.png" alt="StarryBackground" />
+      <img src="images/StarryBackground.png" alt="StarryBackground" />
       <div class="caption">Starry Background</div>
     </div>
     <div class="image-card">
-      <img src="SummerStroll.png" alt="SummerStroll" />
+      <img src="images/SummerStroll.png" alt="SummerStroll" />
       <div class="caption">Summer Stroll</div>
     </div>
     <div class="image-card">
-      <img src="SunriseDoctrine.png" alt="SunriseDoctrine" />
+      <img src="images/SunriseDoctrine.png" alt="SunriseDoctrine" />
       <div class="caption">Sunrise Doctrine</div>
     </div>
     <div class="image-card">
-      <img src="TheExplorerandBlueWing.png" alt="TheExplorerandBlueWing" />
+      <img src="images/TheExplorerandBlueWing.png" alt="TheExplorerandBlueWing" />
       <div class="caption">The Explorer and Blue Wing</div>
     </div>
     <div class="image-card">
-      <img src="ThePaintedLady.png" alt="ThePaintedLady" />
+      <img src="images/ThePaintedLady.png" alt="ThePaintedLady" />
       <div class="caption">The Painted Lady</div>
     </div>
     <div class="image-card">
-      <img src="ThePokeWitch.png" alt="ThePokeWitch" />
+      <img src="images/ThePokeWitch.png" alt="ThePokeWitch" />
       <div class="caption">The Poke Witch</div>
     </div>
     <div class="image-card">
-      <img src="TwoChickadees.png" alt="TwoChickadees" />
+      <img src="images/TwoChickadees.png" alt="TwoChickadees" />
       <div class="caption">Two Chickadees</div>
     </div>
     <div class="image-card">
-      <img src="WizardScreen.png" alt="WizardScreen" />
+      <img src="images/WizardScreen.png" alt="WizardScreen" />
       <div class="caption">Wizard Screen</div>
     </div>
     <div class="image-card">
-      <img src="WoodsView.png" alt="WoodsView" />
+      <img src="images/WoodsView.png" alt="WoodsView" />
       <div class="caption">Woods View</div>
     </div>
     <div class="image-card">
-      <img src="WoodsView2Screen.png" alt="WoodsView2Screen" />
+      <img src="images/WoodsView2Screen.png" alt="WoodsView2Screen" />
       <div class="caption">Woods View 2</div>
     </div>
     <div class="image-card">
-      <img src="WorkingThrough.png" alt="WorkingThrough" />
+      <img src="images/WorkingThrough.png" alt="WorkingThrough" />
       <div class="caption">Working Through</div>
     </div>
     <div class="image-card">
-      <img src="YellowLandscape.png" alt="YellowLandscape" />
+      <img src="images/YellowLandscape.png" alt="YellowLandscape" />
       <div class="caption">Yellow Landscape</div>
     </div>
   </div>
