--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .background {
-      background: url('BirchMeadow.png') center center / cover no-repeat;
+      background: url('iamges/BirchMeadow.png') center center / cover no-repeat;
       opacity: 0.6;
       position: absolute;
       width: 100%;
@@ -28,7 +28,7 @@
     }
 
     .mist-overlay {
-      background: url('mist-tile.png') repeat;
+      background: url('images/mist-tile.png') repeat;
       opacity: 0.3;
       position: fixed;
       width: 100%;
