--- a/sigil-oracle.html
+++ b/sigil-oracle.html
@@ -22,7 +22,7 @@
     }
 
     .mist-overlay {
-      background: url('mist-tile.png') repeat;
+      background: url('images/mist-tile.png') repeat;
       opacity: 0.6;
       position: fixed;
       width: 100%;
