--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .background {
-      background: url('iamges/BirchMeadow.png') center center / cover no-repeat;
+      /*background: url('images/BirchMeadow.png') center center / cover no-repeat;*/
       opacity: 0.9;
       position: absolute;
       width: 100%;
