--- a/story1.html
+++ b/story1.html
@@ -201,7 +201,7 @@
 
 
     <div class="image-block">
-      <img src="EvenTheSmallestThings.png" alt="Even the Smallest Things" />
+      <img src="images/EvenTheSmallestThings.png" alt="Even the Smallest Things" />
       <div class="caption">Even the Smallest Things</div>
     </div>
 
