--- a/story2.html
+++ b/story2.html
@@ -178,7 +178,7 @@
 
 
     <div class="image-block">
-      <img src="TheExplorerandBlueWing.png" alt="The Explorer and BlueWing artwork" />
+      <img src="images/TheExplorerandBlueWing.png" alt="The Explorer and BlueWing artwork" />
       <div class="caption">The Explorer and BlueWing</div>
     </div>
 
