--- a/story3.html
+++ b/story3.html
@@ -160,7 +160,7 @@
   <div class="story-container">
    
     <div class="image-block">
-      <img src="BlueLandscape.png" alt="Blue Landscape" />
+      <img src="images/BlueLandscape.png" alt="Blue Landscape" />
       <div class="caption">Blue Landscape</div>
     </div>
 
