--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .background {
-      /*background: url('images/BirchMeadow.png') center center / cover no-repeat;*/
+      background: rgba(3, 3, 3, 0.4);
       opacity: 1;
       position: absolute;
       width: 100%;
