--- a/newHomePage.html
+++ b/newHomePage.html
@@ -29,8 +29,8 @@
     }
 
     .mist-overlay {
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><circle cx="20" cy="20" r="2" fill="rgba(255,255,255,0.1)"/><circle cx="80" cy="40" r="1.5" fill="rgba(255,255,255,0.08)"/><circle cx="40" cy="70" r="1" fill="rgba(255,255,255,0.06)"/><circle cx="70" cy="10" r="1.2" fill="rgba(255,255,255,0.09)"/><circle cx="10" cy="60" r="0.8" fill="rgba(255,255,255,0.05)"/></svg>') repeat;
-      opacity: 0.6;
+      background: url('images/mist-overlay.png') repeat;
+      opacity: 0.9;
       position: fixed;
       width: 100%;
       height: 100%;
@@ -99,20 +99,28 @@
     .cruxfade-link {
       font-size: 1.3rem;
       margin-bottom: 2rem;
-      color: rgba(255, 255, 255, 0.7);
+      color: rgba(255, 255, 255, 0.7) !important;
       text-decoration: none;
       transition: all 0.3s ease;
-      padding: 0.5rem 1rem;
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      padding: 0.5rem 1rem !important;
+      border: 1px solid rgba(255, 255, 255, 0.3) !important;
       border-radius: 8px;
       backdrop-filter: blur(5px);
+      background: transparent !important;
+      box-shadow: none !important;
+      transform: none !important;
+      height: 60px !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
     }
 
     .cruxfade-link:hover {
-      color: #fff;
-      border-color: rgba(255, 255, 255, 0.6);
-      background: rgba(255, 255, 255, 0.1);
-      transform: translateY(-2px);
+      color: #fff !important;
+      border-color: rgba(255, 255, 255, 0.6) !important;
+      background: rgba(255, 255, 255, 0.1) !important;
+      transform: translateY(-2px) !important;
+      box-shadow: none !important;
     }
 
     .nav {
@@ -136,6 +144,10 @@
       transition: all 0.3s ease;
       border: 1px solid rgba(255, 255, 255, 0.2);
       text-align: center;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .nav a:hover {
