--- a/gallery.html
+++ b/gallery.html
@@ -32,9 +32,11 @@
     .mist-overlay {
       background: url('images/mist-overlay.png') repeat;
       opacity: 0.4;
-      position: fixed;
+      position: absolute;
       width: 100%;
-      height: 100%;
+      min-height: 100%;
+      top: 0;
+      left: 0;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
