--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
       background-color: #0a0a0a;
       color: #f0f0f0;
       overflow-x: hidden;
+      position: relative;
     }
 
     .background {
@@ -34,7 +35,7 @@
       opacity: 0.4;
       position: absolute;
       width: 100%;
-      min-height: 100%;
+      height: 100%;
       top: 0;
       left: 0;
       z-index: -1;
