--- a/gallery.html
+++ b/gallery.html
@@ -33,9 +33,9 @@
     .mist-overlay {
       background: url('images/mist-overlay.png') repeat;
       opacity: 0.4;
-      position: absolute;
+      position: fixed;
       width: 100%;
-      height: 100%;
+      height: 200vh;
       top: 0;
       left: 0;
       z-index: -1;
