--- a/stories.html
+++ b/stories.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stories — Sketchy Ponderings</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -13,18 +14,28 @@
 
     body {
       min-height: 100vh;
-      font-family: 'Georgia', serif;
-      background-color: #1e1e1e;
+      font-family: 'Source Sans Pro', sans-serif;
+      background-color: #0a0a0a;
       color: #f0f0f0;
       overflow-x: hidden;
+      position: relative;
     }
 
-    .mist-overlay {
-      background: url('images/mist-tile.png') repeat;
-      opacity: 0.6;
+    .background {
+      background: rgba(20, 20, 30, 0.8);
+      opacity: 1;
       position: fixed;
       width: 100%;
       height: 100%;
+      z-index: -2;
+    }
+
+    .mist-overlay {
+      background: url('images/mist-overlay.png') repeat;
+      opacity: 0.4;
+      position: fixed;
+      width: 100%;
+      height: 250vh;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
@@ -34,145 +45,350 @@
       to { background-position: -500px 500px; }
     }
 
-    h1 {
+    .header {
       text-align: center;
-      padding: 2rem;
-      font-size: 2.5rem;
-      color: #e2e2e2;
-    }
-
-    .nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
+      padding: 3rem 2rem 2rem;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.2);
       margin-bottom: 2rem;
     }
 
+    h1 {
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 3.5rem;
+      font-weight: 500;
+      color: #f2f2f2;
+      text-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      margin-bottom: 0.5rem;
+    }
+
+    .subtitle {
+      font-size: 1.2rem;
+      color: rgba(255, 255, 255, 0.8);
+      font-weight: 300;
+      font-style: italic;
+    }
+
+    .nav {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1rem;
+      max-width: 600px;
+      margin: 0 auto 3rem;
+      padding: 0 2rem;
+    }
+
     .nav a {
-      background-color: rgba(0, 0, 0, 0.4);
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
       color: #fff;
       text-decoration: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 5px;
-      font-size: 1.1rem;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 400;
       transition: all 0.3s ease;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      text-align: center;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .nav a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.15);
+      border-color: rgba(255, 255, 255, 0.4);
+      transform: translateY(-3px);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .nav a.creative {
+      border-color: rgba(138, 43, 226, 0.4);
+    }
+
+    .nav a.creative:hover {
+      border-color: rgba(138, 43, 226, 0.8);
+      background: rgba(138, 43, 226, 0.1);
+    }
+
+    .nav a.current {
+      background: rgba(138, 43, 226, 0.2);
+      border-color: rgba(138, 43, 226, 0.6);
+    }
+
+    .story-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 2rem;
     }
 
     .story-list {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 2rem 1rem 4rem;
-      display: flex;
-      flex-direction: column;
-      gap: 3rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 2rem;
+      margin-bottom: 3rem;
     }
 
     .story {
-      background-color: rgba(255, 255, 255, 0.05);
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease, background-color 0.3s ease;
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 15px;
+      padding: 2rem;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
 
     .story:hover {
-      background-color: rgba(255, 255, 255, 0.08);
       transform: translateY(-5px);
+      border-color: rgba(255, 255, 255, 0.4);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .story::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3px;
+      background: linear-gradient(90deg, transparent, rgba(138, 43, 226, 0.6), transparent);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .story:hover::before {
+      opacity: 1;
     }
 
     .story h2 {
-      font-size: 1.6rem;
-      margin-bottom: 0.5rem;
-      color: #fafafa;
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 1.8rem;
+      font-weight: 500;
+      margin-bottom: 1rem;
+      color: #f2f2f2;
     }
 
-    .story p {
-      font-style: italic;
-      color: #ccc;
-    }
-
-    .story a {
+    .story h2 a {
       color: inherit;
-      text-decoration: underline;
+      text-decoration: none;
+      transition: color 0.3s ease;
     }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
+    .story h2 a:hover {
+      color: rgba(138, 43, 226, 0.8);
+    }
+
+    .story-excerpt {
+      color: rgba(255, 255, 255, 0.8);
+      line-height: 1.6;
+      font-style: italic;
+      margin-bottom: 1.5rem;
+    }
+
+    .story-meta {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .story-type {
+      background: rgba(255, 255, 255, 0.1);
+      color: rgba(255, 255, 255, 0.7);
+      padding: 0.25rem 0.75rem;
+      border-radius: 15px;
+      font-size: 0.8rem;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .story-link {
+      background: rgba(138, 43, 226, 0.2);
+      color: #fff;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      border: 1px solid rgba(138, 43, 226, 0.4);
+      transition: all 0.3s ease;
       font-size: 0.9rem;
-      color: rgba(255, 255, 255, 0.5);
     }
 
-    .top-button {
+    .story-link:hover {
+      background: rgba(138, 43, 226, 0.4);
+      border-color: rgba(138, 43, 226, 0.6);
+      transform: translateY(-1px);
+    }
+
+    .back-to-top {
       position: fixed;
       bottom: 30px;
       right: 30px;
-      background-color: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(10px);
       color: #fff;
-      border: none;
+      border: 1px solid rgba(255, 255, 255, 0.2);
       border-radius: 50%;
-      width: 48px;
-      height: 48px;
-      font-size: 1.5rem;
+      width: 50px;
+      height: 50px;
+      font-size: 1.2rem;
       cursor: pointer;
       z-index: 10;
       display: none;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
 
-    .top-button:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+    .back-to-top:hover {
+      background: rgba(255, 255, 255, 0.1);
+      border-color: rgba(255, 255, 255, 0.4);
+      transform: translateY(-2px);
     }
 
-    .top-button.show {
+    .back-to-top.show {
       display: flex;
+    }
+
+    footer {
+      text-align: center;
+      padding: 3rem 2rem;
+      font-size: 0.9rem;
+      color: rgba(255,255,255,0.5);
+      font-family: 'Source Sans Pro', sans-serif;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.2);
+      margin-top: 2rem;
+    }
+
+    .intro-section {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 3rem;
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+    }
+
+    .intro-section p {
+      color: rgba(255, 255, 255, 0.8);
+      line-height: 1.6;
+      font-size: 1.1rem;
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+      
+      .nav {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.8rem;
+      }
+      
+      .nav a {
+        padding: 0.8rem 1rem;
+        font-size: 0.9rem;
+      }
+
+      .story-list {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+      }
+
+      .story {
+        padding: 1.5rem;
+      }
+
+      .header {
+        padding: 2rem 1rem 1rem;
+      }
+
+      .story-container {
+        padding: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .nav {
+        grid-template-columns: 1fr;
+      }
+
+      .story-meta {
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
 <body>
+  <div class="background"></div>
   <div class="mist-overlay"></div>
 
-  <h1>Stories</h1>
+  <div class="header">
+    <h1>Stories</h1>
+    <p class="subtitle">Tales from the threshold of experience</p>
+  </div>
 
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="stories.html">Stories</a>
+    <a href="games.html" class="creative">Games</a>
+    <a href="music.html" class="creative">Music</a>
+    <a href="stories.html" class="current">Stories</a>
+    <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </div>
 
-  <div class="story-list">
-    <div class="story">
-      <h2><a href="story1.html">Handwarmers</a></h2>
-      <p>A mouse takes refuge in a slipper on a cold winter night, leading to an unexpected morning discovery...</p>
+  <div class="story-container">
+    <div class="intro-section">
+      <p>Brief glimpses into moments where the ordinary world reveals its hidden depths. Each story captures a threshold experience—those liminal spaces where wonder breaks through the everyday.</p>
     </div>
 
-    <div class="story">
-      <h2><a href="story2.html">Wing and Foot</a></h2>
-      <p>A jog to Cherry Pond turns into a magical race with a butterfly, blurring the line between human and nature...</p>
-    </div>
+    <div class="story-list">
+      <div class="story">
+        <h2><a href="story1.html">Handwarmers</a></h2>
+        <p class="story-excerpt">A mouse takes refuge in a slipper on a cold winter night, leading to an unexpected morning discovery that speaks to the gentle intersections between human and wild...</p>
+        <div class="story-meta">
+          <span class="story-type">Micro Fiction</span>
+          <a href="story1.html" class="story-link">Read Story</a>
+        </div>
+      </div>
 
-    <div class="story">
-      <h2><a href="story3.html">The Hollow Stone</a></h2>
-      <p>A winter hike leads through a cracked boulder into a hidden grove, revealing a silent gathering of moose...</p>
+      <div class="story">
+        <h2><a href="story2.html">Wing and Foot</a></h2>
+        <p class="story-excerpt">A jog to Cherry Pond turns into a magical race with a butterfly, blurring the line between human and nature in a dance of movement and presence...</p>
+        <div class="story-meta">
+          <span class="story-type">Nature Writing</span>
+          <a href="story2.html" class="story-link">Read Story</a>
+        </div>
+      </div>
+
+      <div class="story">
+        <h2><a href="story3.html">The Hollow Stone</a></h2>
+        <p class="story-excerpt">A winter hike leads through a cracked boulder into a hidden grove, revealing a silent gathering of moose in a moment of profound wilderness encounter...</p>
+        <div class="story-meta">
+          <span class="story-type">Wilderness Tale</span>
+          <a href="story3.html" class="story-link">Read Story</a>
+        </div>
+      </div>
     </div>
   </div>
+
+  <button class="back-to-top" id="scrollTop" title="Back to top">↑</button>
 
   <footer>
     &copy; 2025 Sketchy Ponderings — quietly relentless.
   </footer>
 
-  <button class="top-button" id="scrollTop" title="Back to top">↑</button>
-
   <script>
+    // Back to top functionality
     const topButton = document.getElementById('scrollTop');
     window.addEventListener('scroll', () => {
       if (window.scrollY > 300) {
@@ -184,6 +400,13 @@
 
     topButton.addEventListener('click', () => {
       window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    // Parallax effect for mist
+    window.addEventListener('scroll', () => {
+      const scrolled = window.pageYOffset;
+      const rate = scrolled * -0.3;
+      document.querySelector('.mist-overlay').style.transform = `translateY(${rate}px)`;
     });
   </script>
 </body>
