--- a/story3.html
+++ b/story3.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Hollow Stone — Sketchy Ponderings</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;700&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -13,19 +14,28 @@
 
     body {
       min-height: 100vh;
-      font-family: 'Georgia', serif;
-      background-color: #1e1e1e;
+      font-family: 'Source Sans Pro', sans-serif;
+      background-color: #0a0a0a;
       color: #f0f0f0;
       overflow-x: hidden;
-      padding-bottom: 4rem;
+      position: relative;
     }
 
-    .mist-overlay {
-      background: url('images/mist-tile.png') repeat;
-      opacity: 0.6;
+    .background {
+      background: rgba(20, 20, 30, 0.8);
+      opacity: 1;
       position: fixed;
       width: 100%;
       height: 100%;
+      z-index: -2;
+    }
+
+    .mist-overlay {
+      background: url('images/mist-overlay.png') repeat;
+      opacity: 0.4;
+      position: fixed;
+      width: 100%;
+      height: 250vh;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
@@ -35,168 +45,327 @@
       to { background-position: -500px 500px; }
     }
 
-    h1 {
-  text-align: center;
-  padding-top: 3rem;
-  padding-bottom: 1rem;
-  font-size: 2.5rem;
-  color: #e2e2e2;
-  margin-bottom: 1rem; /* Add this to match visual gap */
-}
+    .header {
+      text-align: center;
+      padding: 3rem 2rem 2rem;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.2);
+      margin-bottom: 2rem;
+    }
 
-.nav {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-  margin-bottom: 2rem;
-}
+    h1 {
+      font-family: 'Cormorant Garamond', serif;
+      font-size: 3.5rem;
+      font-weight: 500;
+      color: #f2f2f2;
+      text-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      margin-bottom: 0.5rem;
+    }
+
+    .subtitle {
+      font-size: 1.1rem;
+      color: rgba(255, 255, 255, 0.7);
+      font-weight: 300;
+      font-style: italic;
+    }
+
+    .nav {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1rem;
+      max-width: 600px;
+      margin: 0 auto 3rem;
+      padding: 0 2rem;
+    }
 
     .nav a {
-      background-color: rgba(0, 0, 0, 0.4);
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
       color: #fff;
       text-decoration: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 5px;
-      font-size: 1.1rem;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 400;
       transition: all 0.3s ease;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      text-align: center;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .nav a:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.15);
+      border-color: rgba(255, 255, 255, 0.4);
+      transform: translateY(-3px);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .nav a.creative {
+      border-color: rgba(138, 43, 226, 0.4);
+    }
+
+    .nav a.creative:hover {
+      border-color: rgba(138, 43, 226, 0.8);
+      background: rgba(138, 43, 226, 0.1);
     }
 
     .story-container {
-      max-width: 700px;
+      max-width: 800px;
       margin: 0 auto;
-      padding: 1rem 1.5rem 3rem;
-      line-height: 1.8;
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 15px;
+      position: relative;
+      overflow: hidden;
     }
 
-    .story-container p {
-      margin-bottom: 1.5rem;
-    }
-
-    .story-container .line {
-      display: block;
-      margin-bottom: 1rem;
+    .story-container::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 3px;
+      background: linear-gradient(90deg, transparent, rgba(138, 43, 226, 0.6), transparent);
     }
 
     .image-block {
       text-align: center;
-      margin: 3rem auto 2rem;
+      margin: 0 0 3rem 0;
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .image-block img {
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       height: auto;
       border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+      box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+      transition: transform 0.3s ease;
+    }
+
+    .image-block img:hover {
+      transform: scale(1.02);
     }
 
     .caption {
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
-      color: #ccc;
+      margin-top: 1rem;
+      font-size: 1rem;
+      color: rgba(255, 255, 255, 0.8);
       font-style: italic;
+      font-family: 'Source Sans Pro', sans-serif;
     }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
+    .story-text {
+      font-family: 'Georgia', serif;
+      font-size: 1.1rem;
+      line-height: 1.8;
+      color: rgba(255, 255, 255, 0.9);
+    }
+
+    .story-text p.line {
+      margin: 0.3rem 0;
+      display: block;
+    }
+
+    .story-text p.line.spaced {
+      margin-top: 2rem;
+    }
+
+    .story-text p.line:first-child {
+      margin-top: 0;
+    }
+
+    .story-meta {
+      margin-top: 3rem;
+      padding-top: 2rem;
+      border-top: 1px solid rgba(255, 255, 255, 0.2);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .story-type {
+      background: rgba(255, 255, 255, 0.1);
+      color: rgba(255, 255, 255, 0.7);
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
       font-size: 0.9rem;
-      color: rgba(255, 255, 255, 0.5);
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
-    .top-button {
+    .back-link {
+      background: rgba(138, 43, 226, 0.2);
+      color: #fff;
+      text-decoration: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      border: 1px solid rgba(138, 43, 226, 0.4);
+      transition: all 0.3s ease;
+      font-weight: 400;
+    }
+
+    .back-link:hover {
+      background: rgba(138, 43, 226, 0.4);
+      border-color: rgba(138, 43, 226, 0.6);
+      transform: translateY(-2px);
+    }
+
+    .back-to-top {
       position: fixed;
       bottom: 30px;
       right: 30px;
-      background-color: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(10px);
       color: #fff;
-      border: none;
+      border: 1px solid rgba(255, 255, 255, 0.2);
       border-radius: 50%;
-      width: 48px;
-      height: 48px;
-      font-size: 1.5rem;
+      width: 50px;
+      height: 50px;
+      font-size: 1.2rem;
       cursor: pointer;
       z-index: 10;
       display: none;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
 
-    .top-button:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+    .back-to-top:hover {
+      background: rgba(255, 255, 255, 0.1);
+      border-color: rgba(255, 255, 255, 0.4);
+      transform: translateY(-2px);
     }
 
-    .top-button.show {
+    .back-to-top.show {
       display: flex;
     }
-    p.line {
-    margin: 0.2em 0;
+
+    footer {
+      text-align: center;
+      padding: 3rem 2rem;
+      font-size: 0.9rem;
+      color: rgba(255,255,255,0.5);
+      font-family: 'Source Sans Pro', sans-serif;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.2);
+      margin-top: 3rem;
     }
 
-  p.line + p.line.spaced {
-  margin-top: 2em;
-  }
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+      
+      .nav {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.8rem;
+      }
+      
+      .nav a {
+        padding: 0.8rem 1rem;
+        font-size: 0.9rem;
+      }
+
+      .story-container {
+        margin: 0 1rem;
+        padding: 1.5rem;
+      }
+
+      .header {
+        padding: 2rem 1rem 1rem;
+      }
+
+      .story-meta {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .nav {
+        grid-template-columns: 1fr;
+      }
+
+      .story-text {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
+  <div class="background"></div>
   <div class="mist-overlay"></div>
 
-  <h1>The Hollow Stone</h1>
+  <div class="header">
+    <h1>The Hollow Stone</h1>
+    <p class="subtitle">A portal to the ancient gathering</p>
+  </div>
 
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
+    <a href="games.html" class="creative">Games</a>
+    <a href="music.html" class="creative">Music</a>
     <a href="stories.html">Stories</a>
+    <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </div>
 
   <div class="story-container">
-   
     <div class="image-block">
       <img src="images/BlueLandscape.png" alt="Blue Landscape" />
       <div class="caption">Blue Landscape</div>
     </div>
 
+    <div class="story-text">
+      <p class="line spaced">My friend and I were winter hiking up Sugarloaf Mountain. It was April, warm and muddy in town, but still full winter up in the woods.</p>
 
+      <p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
+      <p class="line">If you've ever stood near a moose in the wild you know that their heads are basically the size of your whole body.</p>
+      <p class="line">It just stared at us. We stared back.</p>
+      <p class="line">It had big blond puffs of fur from knee to hoof. It had the styling of a clydesdale, but somehow bigger and more majestic. Truly surreal.</p>
 
-<p class="line spaced">My friend and I were winter hiking up Sugarloaf Mountain. It was April, warm and muddy in town, but still full winter up in the woods.</p>
+      <p class="line spaced">We decided to backtrack and look for a way around.</p>
+      <p class="line">I remembered a big split rock nearby, this massive boulder cracked in half by frost, just enough space to crouch-walk through.</p>
+      <p class="line">So we cut through that, this little cave, and came out the other side...</p>
 
-<p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
-<p class="line">If you’ve ever stood near a moose in the wild you know that their heads are basically the size of your whole body.</p>
-<p class="line">It just stared at us. We stared back.</p>
-<p class="line">It had big blond puffs of fur from knee to hoof. It had the styling of a clydesdale, but somehow bigger and more majestic. Truly surreal.</p>
+      <p class="line spaced">And there was another moose.</p>
 
-<p class="line spaced">We decided to backtrack and look for a way around.</p>
-<p class="line">I remembered a big split rock nearby, this massive boulder cracked in half by frost, just enough space to crouch-walk through.</p>
-<p class="line">So we cut through that, this little cave, and came out the other side...</p>
+      <p class="line spaced">But this time, as we stood there, more and more started to move.</p>
+      <p class="line">One by one, they stepped out from the trees or turned their heads,</p>
+      <p class="line">and we realized we'd walked straight into a whole group of moose that had just been standing there, totally blended into the forest.</p>
 
-<p class="line spaced">And there was another moose.</p>
+      <p class="line spaced">Again it felt sureal. Like we'd stepped through a portal or something</p>
+      <p class="line">and found ourselves in some ancient, hidden place.</p>
 
-<p class="line spaced">But this time, as we stood there, more and more started to move.</p>
-<p class="line">One by one, they stepped out from the trees or turned their heads,</p>
-<p class="line">and we realized we’d walked straight into a whole group of moose that had just been standing there, totally blended into the forest.</p>
+      <p class="line spaced">Still one of the coolest, most haunting moments I've ever had in the woods.</p>
+    </div>
 
-<p class="line spaced">Again it felt sureal. Like we’d stepped through a portal or something</p>
-<p class="line">and found ourselves in some ancient, hidden place.</p>
-
-<p class="line spaced">Still one of the coolest, most haunting moments I’ve ever had in the woods.</p>
-
+    <div class="story-meta">
+      <span class="story-type">Wilderness Tale</span>
+      <a href="stories.html" class="back-link">← Back to Stories</a>
+    </div>
   </div>
+
+  <button class="back-to-top" id="scrollTop" title="Back to top">↑</button>
 
   <footer>
     &copy; 2025 Sketchy Ponderings — quietly relentless.
   </footer>
 
-  <button class="top-button" id="scrollTop" title="Back to top">↑</button>
-
   <script>
+    // Back to top functionality
     const topButton = document.getElementById('scrollTop');
     window.addEventListener('scroll', () => {
       if (window.scrollY > 300) {
@@ -208,6 +377,13 @@
 
     topButton.addEventListener('click', () => {
       window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    // Parallax effect for mist
+    window.addEventListener('scroll', () => {
+      const scrolled = window.pageYOffset;
+      const rate = scrolled * -0.3;
+      document.querySelector('.mist-overlay').style.transform = `translateY(${rate}px)`;
     });
   </script>
 </body>
