--- a/music.html
+++ b/music.html
@@ -690,7 +690,7 @@
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/BattleIncense.mp3" preload="metadata"></audio>
+          <audio src="music/BattleIncens.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
@@ -846,7 +846,7 @@
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/SundayRelief.mp3" preload="metadata"></audio>
+          <audio src="music/SundayRelift.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
