--- a/music.html
+++ b/music.html
@@ -785,7 +785,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/BattleIncense.mp3" preload="metadata"></audio>
+          <audio src="music/BattleIncens.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
@@ -848,7 +848,7 @@ audio {
       </div>
 
       <div class="track-card">
-        <div class="track-title">Chill Tribal</div>
+        <div class="track-title">Chibi Tribal</div>
         <div class="track-description">Ancient rhythms filtered through modern sensibilities, creating a bridge between primal and digital worlds.</div>
         <div class="waveform-visual">
           <div class="waveform-bars">
@@ -863,7 +863,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/ChillTribal.mp3" preload="metadata"></audio>
+          <audio src="music/ChibiTribal.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
@@ -1004,7 +1004,7 @@ audio {
       </div>
 
       <div class="track-card">
-        <div class="track-title">Friday Lift</div>
+        <div class="track-title">Friday Lofi</div>
         <div class="track-description">The weekly exhale transformed into sonic celebration, where relief becomes euphoria and freedom takes flight.</div>
         <div class="waveform-visual">
           <div class="waveform-bars">
@@ -1019,7 +1019,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/FridayLift.mp3" preload="metadata"></audio>
+          <audio src="music/FridayLofi.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
