--- a/music.html
+++ b/music.html
@@ -1315,6 +1315,84 @@ audio {
         </div>
       </div>
 
+<div class="track-card">
+        <div class="track-title">Sprout</div>
+        <div class="track-description">Something sprouts and grows.</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/Sprout-1.mp3.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">Sprout</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
+<div class="track-card">
+        <div class="track-title">Sunday Relift</div>
+        <div class="track-description">Sunday and chill</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/SundayRelift.mp3.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">Sprout</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
       <!-- Additional track cards go here... -->
       <!-- Add more <div class="track-card">...</div> as needed -->
 
