--- a/music.html
+++ b/music.html
@@ -1374,7 +1374,7 @@ audio {
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
-              <div class="track-name">Sprout</div>
+              <div class="track-name">Sunday Relift</div>
               <div class="track-time">0:00 / 0:00</div>
             </div>
           </div>
