--- a/music.html
+++ b/music.html
@@ -1331,7 +1331,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/Sprout-1.mp3.mp3" preload="metadata"></audio>
+          <audio src="music/Sprout-1.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
@@ -1370,7 +1370,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/SundayRelift.mp3.mp3" preload="metadata"></audio>
+          <audio src="music/SundayRelift.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
